<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#616161">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@drawable/leftcourt">

                    <ImageView
                        android:id="@+id/lakersImageView"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:paddingTop="6dp"
                        android:elevation="4dp"
                        android:src="@drawable/lakers"
                        android:contentDescription="@string/lakers_logo" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/lakers_label_txtview"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:background="#333"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:id="@+id/lakers_score_txtview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:text="@string/lakers_default_score"
                    android:background="#fff"
                    android:textColor="#000000"
                    android:textSize="56sp"
                    app:fontFamily="sans-serif-light" />

                <Button
                    android:id="@+id/lakersThreePoints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:elevation="4dp"
                    android:onClick="addThreeForLakers"
                    android:text="@string/lakers_plus_threePoints" />

                <Button
                    android:id="@+id/lakersTwoPoints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:elevation="4dp"
                    android:onClick="addTwoForLakers"
                    android:text="@string/lakers_plus_twoPoints" />

                <Button
                    android:id="@+id/lakersOnePoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:elevation="4dp"
                    android:onClick="addOneForLakers"
                    android:text="@string/lakers_plus_onePoint" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="250dp"
                android:background="@android:color/darker_gray" />

            <!-- Right Side of the screen-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@drawable/rightcourt">

                    <ImageView
                        android:id="@+id/celticsImageView"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:paddingTop="6dp"
                        android:elevation="4dp"
                        android:contentDescription="@string/celtics_logo"
                        android:src="@drawable/celtics"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/celtics_label_txtview"
                    android:textColor="#fff"
                    android:background="#333"
                    android:textSize="14sp"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:id="@+id/celtics_score_txtview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:text="@string/celtics_default_score"
                    android:background="#fff"
                    android:textColor="#000000"
                    android:textSize="56sp"
                    app:fontFamily="sans-serif-light" />

                <Button
                    android:id="@+id/celticsThreePoints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:elevation="4dp"
                    android:onClick="addThreeForCeltics"
                    android:text="@string/celtics_plus_threePoints" />

                <Button
                    android:id="@+id/celticsTwoPoints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:elevation="4dp"
                    android:onClick="addTwoForCeltics"
                    android:text="@string/celtics_plus_twoPoints" />

                <Button
                    android:id="@+id/celticsOnePoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:elevation="4dp"
                    android:onClick="addOneForCeltics"
                    android:text="@string/celtics_plus_onePoint" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:elevation="4dp"
            android:onClick="setBothTeamsToZero"
            android:text="@string/resetBtn" />

</RelativeLayout>